Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63018

[iOS]: When moving the selection handles in a TextEdit the cursorRectChanged signal is emitted even if the cursor rect is not actually changed

    XMLWordPrintable

Details

    • iOS/tvOS/watchOS
    • be06164201d7d9ccdbaaff343af2e8f3662c044d (qt/qtbase/dev) cdf8c961183c856fed58bc201bf0d67e8207d3f5 (qt/qtbase/6.1)
    • UI Bug Fixing Q1/2021

    Description

      [iOS]: When moving the selection handles in a TextEdit the cursorRectChanged signal is emitted even if the cursor rect is not actually changed

      Attachments

        For Gerrit Dashboard: QTBUG-63018
        # Subject Branch Project Status CR V

        Activity

          People

            richard Richard Moe Gustavsen
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes